--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  background-color: gold;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  width: 100vw;
+} 
+
+.card {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid;
+  max-width: 500px;
+  box-shadow: 10px 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.tag {
+  background-color: gold;
+  width: fit-content;
+  border-radius: 5px;
+  font-weight: 700;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-img {
+  border-radius: 10px;
+  width: 100%;
+}
+
+.content {
+  color: rgba(57, 57, 57, 0.855);
+}
+
+.profile{
+  display: flex;
+  align-items: center;
+
+}
+
+.profile-img {
+  width: 40px;
+}
+
+.name{
+  margin: 10px;
+  font-weight: 600;
 }
